syntax = "proto3";
option go_package = "./proto";

service RateLimiterService {
  rpc RegisterClient(ClientRequest) returns (ClientResponse);
  rpc GetClient(SingleClientRequest) returns (ClientResponse);
  rpc UpdateClient(ClientRequest) returns (SuccessResponse);
  rpc DeleteClient(SingleClientRequest) returns (SuccessResponse);
  rpc VerifyLimit(SingleClientRequest) returns (StateResponse);
}

message SingleClientRequest{
  string name = 1;
}

message SuccessResponse{
  string response = 1;
}

message StateResponse{
  bool allowed = 1;
  int64 total_requests = 2;
  int64 expires_at = 3;
}

message ClientRequest{
  string name = 1;
  int64 limit = 2;
  int64 duration = 3;
}

message ClientResponse{
  string id = 1;
  string name = 2;
  int64 limit = 3;
  int64 duration = 4;
}